Annotate Models so that the database skeleton is found in each model file

--- a/test/fixtures/main_playlist_likes.yml
+++ b/test/fixtures/main_playlist_likes.yml
@@ -1,4 +1,13 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: main_playlist_likes
+#
+#  id                 :bigint           not null, primary key
+#  main_liked_song_id :integer          not null
+#  main_playlist_id   :integer          not null
+#  created_at         :datetime         not null
+#  updated_at         :datetime         not null
+#
 
 one:
   main_liked_song_id: 1
