--- a/test/fixtures/other_playlist_likes.yml
+++ b/test/fixtures/other_playlist_likes.yml
@@ -1,4 +1,13 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: other_playlist_likes
+#
+#  id                  :bigint           not null, primary key
+#  other_liked_song_id :integer          not null
+#  other_playlist_id   :integer          not null
+#  created_at          :datetime         not null
+#  updated_at          :datetime         not null
+#
 
 one:
   other_liked_song_id: 1
