--- a/test/fixtures/artists.yml
+++ b/test/fixtures/artists.yml
@@ -1,4 +1,12 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: artists
+#
+#  id          :bigint           not null, primary key
+#  artist_name :string           not null
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#
 
 one:
   artist_name: MyString
