--- a/test/fixtures/main_playlists.yml
+++ b/test/fixtures/main_playlists.yml
@@ -1,4 +1,14 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: main_playlists
+#
+#  id            :bigint           not null, primary key
+#  total_count   :integer          not null
+#  playlist_name :integer          not null
+#  author_id     :integer          not null
+#  created_at    :datetime         not null
+#  updated_at    :datetime         not null
+#
 
 one:
   total_count: 1
