--- a/test/fixtures/songs.yml
+++ b/test/fixtures/songs.yml
@@ -1,4 +1,14 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: songs
+#
+#  id              :bigint           not null, primary key
+#  album_id        :integer          not null
+#  song_title      :string           not null
+#  total_song_time :integer          not null
+#  created_at      :datetime         not null
+#  updated_at      :datetime         not null
+#
 
 one:
   album_id: 1
