--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "webpack": "^5.10.0",
     "webpack-cli": "^4.2.0"
   },
@@ -32,5 +34,13 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RizzaCarla/Satisfy.git"
+  },
+  "bugs": {
+    "url": "https://github.com/RizzaCarla/Satisfy/issues"
+  },
+  "homepage": "https://github.com/RizzaCarla/Satisfy#readme"
 }
