--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
+    "@types/react-redux": "^7.1.11",
+    "@types/react-router-dom": "^5.1.6",
     "babel-loader": "^8.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
