--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
   "bugs": {
     "url": "https://github.com/RizzaCarla/Satisfy/issues"
   },
-  "homepage": "https://github.com/RizzaCarla/Satisfy#readme"
+  "homepage": "https://github.com/RizzaCarla/Satisfy#readme",
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.12.1"
+  }
 }
