--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6",
     "babel-loader": "^8.2.2",
